<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (c) 2020. SO-BEBOP. All Rights Reserved.
  -->

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="120dp">

    <TextView android:id="@+id/dateText" android:layout_width="wrap_content"
        android:layout_height="wrap_content" android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true" android:layout_alignParentTop="true"
        android:layout_marginStart="20dp" android:layout_marginLeft="20dp"
        android:layout_marginTop="16dp" android:text="dateText"
        app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent" />

    <TextView android:id="@+id/categoryName" android:layout_width="wrap_content"
        android:layout_height="wrap_content" android:layout_below="@+id/dateText"
        android:layout_alignStart="@+id/dateText" android:layout_alignLeft="@+id/dateText"
        android:layout_marginStart="8dp" android:layout_marginLeft="8dp" android:text="categoryName"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        app:layout_constraintStart_toEndOf="@+id/partition"
        app:layout_constraintTop_toTopOf="@+id/partition" />

    <TextView android:id="@+id/numberText" android:layout_width="wrap_content"
        android:layout_height="wrap_content" android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp" android:text="numberText"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        app:layout_constraintStart_toEndOf="@+id/partition2"
        app:layout_constraintTop_toTopOf="@+id/partition2" />

    <TextView android:id="@+id/partition" android:layout_width="wrap_content"
        android:layout_height="wrap_content" android:layout_marginStart="4dp"
        android:layout_marginLeft="4dp" android:text="@string/partition"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        app:layout_constraintStart_toEndOf="@+id/categoryLabel"
        app:layout_constraintTop_toTopOf="@+id/categoryLabel" />

    <TextView android:id="@+id/partition2" android:layout_width="wrap_content"
        android:layout_height="wrap_content" android:layout_marginStart="5dp"
        android:layout_marginLeft="5dp" android:layout_marginTop="8dp"
        android:text="@string/partition"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        app:layout_constraintStart_toEndOf="@+id/numberLabel"
        app:layout_constraintTop_toBottomOf="@+id/partition" />

    <TextView android:id="@+id/categoryLabel" android:layout_width="wrap_content"
        android:layout_height="wrap_content" android:layout_marginTop="8dp"
        android:text="@string/categoryLabel"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium" android:textSize="18sp"
        app:layout_constraintStart_toStartOf="@+id/dateText"
        app:layout_constraintTop_toBottomOf="@+id/dateText" />

    <TextView android:id="@+id/numberLabel" android:layout_width="wrap_content"
        android:layout_height="wrap_content" android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp" android:text="@string/numberLabel"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium" android:textSize="18sp"
        app:layout_constraintStart_toStartOf="@+id/categoryLabel"
        app:layout_constraintTop_toTopOf="@+id/partition2" />


</androidx.constraintlayout.widget.ConstraintLayout>